fix sidebar z-index

--- a/src/components/game/performance/playerperformance.css
+++ b/src/components/game/performance/playerperformance.css
@@ -11,7 +11,6 @@
   border-bottom-left-radius: 0.4rem;
   cursor: pointer;
   overflow: hidden;
-  width: 350px;
 }
 
 /* SHOW FULL PERFORMANCE */
@@ -50,4 +49,10 @@
 
 .current-performance .accuracy {
   margin-left: 1rem;
+}
+
+@media (min-width: 900px) {
+  .typist-performance {
+    width: 350px;
+  }
 }
